# ThorNativeMLViewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.bmad-core/: install-manifest.yaml
cmake/: CompilerOptions.cmake  FindCoreML.cmake
docs/: architecture.md  coding-standards.md  prd.md  tech-stack.md
docs/architecture/: coding-standards.md  source-tree.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md
include/thor/app/: Application.hpp
include/thor/core/: Error.hpp
include/thor/rendering/: GLContext.hpp
include/thor/ui/: UIManager.hpp
src/: main.cpp
src/app/: AppState.cpp  AppState.hpp  Application.cpp  Application.hpp  PlaybackController.cpp  PlaybackController.hpp
src/core/: Error.hpp  Math.cpp  Math.hpp
src/data/: ByteOrder.cpp  ByteOrder.hpp  DataError.hpp  DataManager.cpp  DataManager.hpp  DataType.cpp  DataType.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageSequence.cpp  ImageSequence.hpp  ImageSize.cpp  ImageSize.hpp  ImageView.cpp  ImageView.hpp
src/playback/: PlaybackController.cpp  PlaybackController.hpp
src/rendering/: GLContext.cpp  GLContext.hpp  GLRenderer.cpp  GLRenderer.hpp  Renderer.cpp  Renderer.hpp
src/rendering/opengl/: GLRenderer.cpp  GLRenderer.hpp
src/ui/: UIManager.cpp  UIManager.hpp  UserInterface.cpp  UserInterface.hpp
src/ui/widgets/: ZoomChooser.cpp  ZoomChooser.hpp
tests/: CMakeLists.txt  test_error.cpp  test_main.cpp
tests/data/: test_data_manager.cpp  test_image_loader.cpp  test_image_sequence.cpp
tests/playback/: test_playback_controller.cpp
tests/rendering/: test_gl_renderer.cpp
tests/ui/: test_ui_manager.cpp
